@@ -1,5 +1,8 @@
 ## $Id$
 
+# https://sourceforge.net/tracker/?func=detail&atid=476037&aid=1981932&group_id=55124
+MAKEFLAGS = -j1
+
 SUBDIRS = . BuzzMachineLoader
 
 lib_LTLIBRARIES = libbml.la
@@ -14,13 +17,15 @@ libbml_la_SOURCES = bml.c
 libbml_HEADERS = bml.h ./BuzzMachineLoader/BuzzMachineLoader.h
 
 if USE_DLLWRAPPER1
-libbml_la_LIBADD =$(BML_LIBS) \
-	$(top_builddir)/dllwrapper1/wine/libloader.la
+libbml_la_LIBADD = \
+	$(top_builddir)/dllwrapper1/wine/libloader.la \
+        $(BML_LIBS)
 endif
 
 if USE_DLLWRAPPER2
-libbml_la_LIBADD = $(BML_LIBS) \
-	$(top_builddir)/dllwrapper2/libloader.la
+libbml_la_LIBADD = \
+	$(top_builddir)/dllwrapper2/libloader.la \
+        $(BML_LIBS)
 endif
 
 libbml_la_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
@@ -29,13 +34,11 @@ libbml_la_LDFLAGS = -lm -lpthread -ldl
 bin_PROGRAMS=bmltest_info bmltest_process
 
 bmltest_info_SOURCES= bmltest_info.c
-bmltest_info_LDADD = $(BML_LIBS) -ldl \
-	$(top_builddir)/src/libbml.la
+bmltest_info_LDADD = $(BML_LIBS) -ldl libbml.la
 bmltest_info_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 bmltest_process_SOURCES= bmltest_process.c
-bmltest_process_LDADD = $(BML_LIBS) -ldl \
-	$(top_builddir)/src/libbml.la
+bmltest_process_LDADD = $(BML_LIBS) -ldl libbml.la
 bmltest_process_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 dlldir = $(libdir)
