@@ -1,3 +1,9 @@
+2008-06-17  Stefan Kost  <ensonic@users.sf.net>
+
+	* dllwrapper1/wine/Makefile.am:
+	* src/Makefile.am:
+	  Workaround for Bug #1981932.
+
 2008-06-15  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/BuzzMachineLoader.dll:
